# multi-model-infer

./: .gitignore  pyproject.toml
prompt/: prompt.txt
src/multi_model_infer/: __init__.py  __main__.py  client.py  config.py  models.py  runner.py
